# fastapi-uv-app

./: .coverage  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
tests/: test_main.py
