[project]
name = "fastapi-app"
version = "0.1.0"
description = "A simple FastAPI app"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pytest",
    "pytest-asyncio",
    "httpx",
    "pytest-cov",
    "pdoc",
    "slowapi",
    "safety",
    "bandit",
]